Fixed warning symbol visibility

--- a/res/style.css
+++ b/res/style.css
@@ -475,6 +475,10 @@ nav ul {
     height: 150px;
   }
 
+  .warning {
+    display: none;
+  }
+
 
   .project.horizontal-project {
     flex-direction: column;
